BroadleafCommerce/BroadleafCommerce#1397 - Fixed listgrid color flicker

--- a/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/new-admin-changes.css
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/new-admin-changes.css
@@ -405,3 +405,8 @@ input[disabled], input[readonly], fieldset[disabled] input {
 #back-button i:hover {
     color: #F2B95A;
 }
+
+/* added to stop listgrid flicker */
+.table-striped>tbody>tr:nth-of-type(even) {
+    background-color: #F9F7F3;
+}
